Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -471,9 +471,9 @@
                 try {
                     // 🔧 ATENÇÃO: Você deve atualizar esta lista com os nomes exatos dos seus arquivos na pasta /Musics
                     const musicFiles = [
-                        "505-ArcticMonkeys.mp3",
-                        "Musics/Daft Punk - Get Lucky.mp3",
-                        "Musics/Queen - Bohemian Rhapsody.mp3"
+                        "Musics/505-ArcticMonkeys.mp3",
+                        "Musics/Art Deco(MP3_128K).mp3",
+                        "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_128K).mp3"
                     ];
 
                     for (const path of musicFiles) {
