Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -469,11 +469,17 @@
             // 🚀 Carrega músicas diretamente do servidor (GitHub Pages)
             async loadFromServerFolder() {
                 try {
-                    // 🔧 ATENÇÃO: Você deve atualizar esta lista com os nomes exatos dos seus arquivos na pasta /Musics
+                                        // 🔧 ATENÇÃO: Lista atualizada com os nomes exatos dos seus arquivos.
                     const musicFiles = [
                         "Musics/505-ArcticMonkeys.mp3",
                         "Musics/Art Deco(MP3_128K).mp3",
-                        "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_128K).mp3"
+                        "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_128K).mp3",
+                        "Musics/GIVĒON - Make You Mine (Official Lyric Video)(MP3_128K).mp3",
+                        "Musics/Imogen Heap - Headlock (Official Video)(MP3_128K).mp3",
+                        "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
+                        "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
+                        "Musics/Sweater Weather(MP3_128K).mp3",
+                        "Musics/Your Rarest of Flowers(MP3_128K).mp3"
                     ];
 
                     for (const path of musicFiles) {
