--- a/index.html
+++ b/index.html
@@ -477,9 +477,9 @@
                         "Musics/GIVĒON - Make You Mine (Official Lyric Video)(MP3_128K).mp3",
                         "Musics/Imogen Heap - Headlock (Official Video)(MP3_128K).mp3",
                         "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
-                        "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
+                        "Arctic Monkeys - Do I Wanna Know_ (Official Video)(720P_HD)(mp3).mp3",
                         "Musics/Sweater Weather(MP3_128K).mp3",
-                        "Musics/Your Rarest of Flowers(MP3_128K).mp3"
+                        "Musics/RealestK - Selfie (Official Audio)(720P_HD)(mp3).mp3"
                     ];
 
                     for (const path of musicFiles) {
