Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -472,14 +472,8 @@
                                         // 🔧 ATENÇÃO: Lista atualizada com os nomes exatos dos seus arquivos.
                     const musicFiles = [
                         "Musics/505-ArcticMonkeys.mp3",
-                        "Musics/Art Deco(MP3_128K).mp3",
-                        "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_128K).mp3",
-                        "Musics/GIVĒON - Make You Mine (Official Lyric Video)(MP3_128K).mp3",
-                        "Musics/Imogen Heap - Headlock (Official Video)(MP3_128K).mp3",
-                        "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
-                        "Arctic Monkeys - Do I Wanna Know_ (Official Video)(720P_HD)(mp3).mp3",
-                        "Musics/Sweater Weather(MP3_128K).mp3",
-                        "Musics/RealestK - Selfie (Official Audio)(720P_HD)(mp3).mp3"
+                        "Musics/Art Deco(MP3_128K).mp3"
+                        
                     ];
 
                     for (const path of musicFiles) {
