Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spobrefy - Seu Web Player Moderno</title>
+    <title>Spobrefy</title>
 
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1DB954"/>
