--- a/index.html
+++ b/index.html
@@ -471,7 +471,9 @@
                         "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
                         "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
                         "Musics/Sweater Weather(MP3_128K).mp3",
-                        "Musics/Your Rarest of Flowers(MP3_128K).mp3"
+                        "Musics/Your Rarest of Flowers(MP3_128K).mp3",
+                        "Lied To(M4A_128K).m4a"
+
                     ];
                     
                     const existingFileNames = this.state.songs.map(song => song.file.name);
