--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
                         "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
                         "Musics/Sweater Weather(MP3_128K).mp3",
                         "Musics/Your Rarest of Flowers(MP3_128K).mp3",
-                        "Musics/Lied To(M4A_128K).m4a"
-
+                        "Musics/Lied To(M4A_128K).m4a",
+                        "Musics/Lied To(MP3_128K).mp3"
                     ];
                     
                     const existingFileNames = this.state.songs.map(song => song.file.name);
