--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spobrefy</title>
+    <title>Spobrefy - Seu Web Player Moderno</title>
 
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1DB954"/>
@@ -16,7 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/music-metadata-browser@2.5.10/dist/music-metadata-browser.min.js"></script>
 
     <style>
         body {
@@ -471,8 +472,7 @@
                         "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
                         "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
                         "Musics/Sweater Weather(MP3_128K).mp3",
-                        "Musics/Your Rarest of Flowers(MP3_128K).mp3",
-                        "Musics/Lied To(MP3_128K).mp3"
+                        "Musics/Your Rarest of Flowers(MP3_128K).mp3"
                     ];
                     
                     const existingFileNames = this.state.songs.map(song => song.file.name);
@@ -759,24 +759,35 @@
                 }
             },
 
-            readAudioMetadata(file) {
-                return new Promise((resolve) => {
-                    jsmediatags.read(file, {
-                        onSuccess: (tag) => {
-                            const { title, artist, picture } = tag.tags;
-                            let coverUrl = null;
-                            if (picture) {
-                                const base64String = btoa(String.fromCharCode.apply(null, picture.data));
-                                coverUrl = `data:${picture.format};base64,${base64String}`;
-                            }
-                            resolve({ title: title || file.name.replace(/\.[^/.]+$/, ""), artist, coverUrl });
-                        },
-                        onError: (error) => {
-                            console.warn('Erro ao ler metadados:', error);
-                            resolve({ title: file.name.replace(/\.[^/.]+$/, ""), artist: "Artista Desconhecido", coverUrl: null });
-                        }
-                    });
-                });
+            // ===== FUNÇÃO DE LER METADADOS MODIFICADA =====
+            async readAudioMetadata(file) {
+                try {
+                    // Usa a nova biblioteca (disponível globalmente como "mm")
+                    const metadata = await mm.parseBlob(file);
+                    const { common } = metadata;
+                    let coverUrl = null;
+
+                    if (common.picture && common.picture.length > 0) {
+                        const picture = common.picture[0];
+                        const blob = new Blob([picture.data], { type: picture.format });
+                        coverUrl = URL.createObjectURL(blob);
+                    }
+
+                    return {
+                        title: common.title || file.name.replace(/\.[^/.]+$/, ""),
+                        artist: common.artist || "Artista Desconhecido",
+                        coverUrl: coverUrl
+                    };
+
+                } catch (error) {
+                    console.warn('Erro ao ler metadados com music-metadata-browser:', error);
+                    // Retorno padrão em caso de falha
+                    return {
+                        title: file.name.replace(/\.[^/.]+$/, ""),
+                        artist: "Artista Desconhecido",
+                        coverUrl: null
+                    };
+                }
             },
 
             async saveSongToDB(song) {
@@ -911,21 +922,5 @@
         App.init();
     });
     </script>
-<script>
-    // Verifica se o navegador suporta Service Worker
-    if ('serviceWorker' in navigator) {
-      // O evento 'load' garante que o registro só ocorre após o carregamento da página
-      window.addEventListener('load', () => {
-        // Registra o Service Worker, especificando o caminho do seu arquivo (sw.js)
-        navigator.serviceWorker.register('/sw.js')
-          .then(registration => {
-            console.log('ServiceWorker registrado com sucesso:', registration.scope);
-          })
-          .catch(err => {
-            console.error('Falha no registro do ServiceWorker:', err);
-          });
-      });
-    }
-</script>
     </body>
 </html>
