Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -472,7 +472,8 @@
                         "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
                         "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
                         "Musics/Sweater Weather(MP3_128K).mp3",
-                        "Musics/Your Rarest of Flowers(MP3_128K).mp3"
+                        "Musics/Your Rarest of Flowers(MP3_128K).mp3", 
+                        "No. 1 Party Anthem(M4A_128K).m4a"
                     ];
                     
                     const existingFileNames = this.state.songs.map(song => song.file.name);
