Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -463,16 +463,25 @@
             async syncWithServerFolder() {
                 try {
                     const musicFiles = [
-                        "Musics/505-ArcticMonkeys.mp3",
-                        "Musics/Art Deco(MP3_128K).mp3",
-                        "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_128K).mp3",
-                        "Musics/GIVĒON - Make You Mine (Official Lyric Video)(MP3_128K).mp3",
-                        "Musics/Imogen Heap - Headlock (Official Video)(MP3_128K).mp3",
-                        "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
-                        "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
-                        "Musics/Sweater Weather(MP3_128K).mp3",
-                        "Musics/Your Rarest of Flowers(MP3_128K).mp3"
-                    ];
+    "Musics/505-ArcticMonkeys.mp3",
+    "Musics/Arctic Monkeys - Arabella (Official Audio)(MP3_128K).mp3",
+    "Musics/Arctic Monkeys - Do I Wanna Know_(Official Video)(720P_HD).mp3",
+    "Musics/Arctic Monkeys - Do I Wanna Know_(Official Video)(MP3_128K).mp3",
+    "Musics/Art Deco(MP3_128K).mp3",
+    "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_128K).mp3",
+    "Musics/GIVĒON - Make You Mine (Official Lyric Video)(MP3_128K).mp3",
+    "Musics/I Wanna Be Yours(MP3_128K).mp3",
+    "Musics/Imogen Heap - Headlock (Official Video)(MP3_128K).mp3",
+    "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
+    "Musics/LEOWOLF - Romantic Gangster(MP3_128K).mp3",
+    "Musics/Lied To(MP3_128K).mp3",
+    "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
+    "Musics/No. 1 Party Anthem(MP3_128K).mp3",
+    "Musics/RealestK - Selfie (Official Audio)(720P_HD).mp3",
+    "Musics/Sweater Weather(MP3_128K).mp3",
+    "Musics/Your Rarest of Flowers(MP3_128K).mp3"
+];
+
                     
                     const existingFileNames = this.state.songs.map(song => song.file.name);
                     let newSongsAdded = false;
