--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                         "Musics/Arctic Monkeys - Arabella (Official Audio)(MP3_128K).mp3",
                         "Musics/Art Deco(MP3_128K).mp3",
                         "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_128K).mp3",
-                        "GIVĒON - Make You Mine (Official Lyric Video)(MP3_128K).mp3",
+                        "Musics/GIVĒON - Make You Mine (Official Lyric Video)(MP3_128K).mp3",
                         "Musics/I Wanna Be Yours(MP3_128K).mp3",
                         "Musics/Imogen Heap - Headlock (Official Video)(MP3_128K).mp3",
                         "Musics/Lady Gaga_ Bruno Mars - Die With A Smile (Official Music Video)(MP3_128K).mp3",
@@ -476,7 +476,7 @@
                         "Musics/Lied To(MP3_128K).mp3",
                         "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
                         "Musics/No. 1 Party Anthem(MP3_128K).mp3",
-                        "Musics/RealestK - Selfie (Official Audio)(720P_HD).mp3",
+                        "Musics/RealestK - Selfie (Official Audio)(720P_HD)(mp3).mp3",
                         "Musics/Sweater Weather(MP3_128K).mp3",
                         "Musics/Your Rarest of Flowers(MP3_128K).mp3"
                     ];
