--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
                     const musicFiles = [
                         "Musics/505-ArcticMonkeys.mp3",
                         "Musics/Arctic Monkeys - Arabella (Official Audio)(MP3_128K).mp3",
+                        "Musics/Arctic Monkeys - Do I Wanna Know_ (Official Video)(MP3_128K).mp3",
                         "Musics/Art Deco(MP3_128K).mp3",
                         "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_128K).mp3",
                         "Musics/GIVĒON - Make You Mine (Official Lyric Video)(MP3_128K).mp3",
