--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@
                         "Musics/Lied To(MP3_128K).mp3",
                         "Musics/Matt Maeson - Put It on Me(MP3_128K).mp3",
                         "Musics/No. 1 Party Anthem(MP3_128K).mp3",
+                        "Musics/Bruno Mars - It Will Rain (Official Music Video)(MP3_128K).mp3",
                         "Musics/RealestK - Selfie (Official Audio)(720P_HD)(mp3).mp3",
                         "Musics/Sweater Weather(MP3_128K).mp3",
                         "Musics/Your Rarest of Flowers(MP3_128K).mp3"
