--- a/index.html
+++ b/index.html
@@ -480,6 +480,9 @@
                         "Musics/Bruno Mars - It Will Rain (Official Music Video)(MP3_128K).mp3",
                         "Musics/RealestK - Selfie (Official Audio)(720P_HD)(mp3).mp3",
                         "Musics/Sweater Weather(MP3_128K).mp3",
+                        "‎Musics/Daniel Caesar - Always (Official Audio)(MP3_160K).mp3",
+                        "Musics/Get You (feat. Kali Uchis)(MP3_160K).mp3",
+                        "Musics/See You Again (Clean) - Tyler_ The Creator_Kali Uchis(MP3_160K).mp3",
                         "Musics/Your Rarest of Flowers(MP3_128K).mp3"
                     ];
 
