Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -482,7 +482,9 @@
                         "‎Musics/RealestK - Selfie (Official Audio)(MP3_160K).mp3",
                         "Musics/Sweater Weather(MP3_160K).mp3",
                         "Musics/Your Rarest of Flowers(MP3_160K).mp3",
-                        "See You Again (Clean) - Tyler_ The Creator_Kali Uchis(MP3_160K).mp3"
+                        "Musics/See You Again (Clean) - Tyler_ The Creator_Kali Uchis(MP3_160K).mp3",
+                        "Musics/R U Mine_(MP3_160K).mp3"
+       
                     ];
 
                     let changesMade = false;
