Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -483,8 +483,16 @@
                         "Musics/Sweater Weather(MP3_160K).mp3",
                         "Musics/Your Rarest of Flowers(MP3_160K).mp3",
                         "Musics/See You Again (Clean) - Tyler_ The Creator_Kali Uchis(MP3_160K).mp3",
-                        "Musics/R U Mine_(MP3_160K).mp3"
-       
+                        "Musics/R U Mine_(MP3_160K).mp3",
+                        "Musics/Coldplay - Yellow (Official Video)(MP3_160K).mp3",
+                        "Musics/Goo Goo Dolls - Iris [Official Music Video] [4K Remastered](MP3_160K).mp3",
+                        "Musics/James Blunt - Goodbye My Lover (Official Music Video) [4k](MP3_160K).mp3",
+                        "Musics/James Blunt - Same Mistake (Official Music Video)(MP3_160K).mp3",
+                        "Musics/James Blunt - You_re Beautiful (Official Music Video)(MP3_160K).mp3",
+                        "Musics/Olivia Rodrigo - favorite crime (Lyric Video)(MP3_160K).mp3",
+                        "Musics/Olivia Rodrigo - happier (Lyric Video)(MP3_160K).mp3",
+                        "Musics/Sabrina Carpenter - Manchild (Official Lyric Video)(MP3_160K).mp3",
+                        "Musics/I Love You_ I_m Sorry(MP3_160K).mp3"       
                     ];
 
                     let changesMade = false;
