Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                         "Musics/R U Mine_(MP3_160K).mp3",
                         "Musics/Coldplay - Yellow (Official Video)(MP3_160K).mp3",
                         "Musics/Goo Goo Dolls - Iris [Official Music Video] [4K Remastered](MP3_160K).mp3",
-                        "Musics/James Blunt - Goodbye My Lover (Official Music Video) [4k](MP3_160K).mp3",
+                        "Musics/James Blunt - Goodbye My Lover (Official Music Video) [4K](MP3_160K).mp3",
                         "Musics/James Blunt - Same Mistake (Official Music Video)(MP3_160K).mp3",
                         "Musics/James Blunt - You_re Beautiful (Official Music Video)(MP3_160K).mp3",
                         "Musics/Olivia Rodrigo - favorite crime (Lyric Video)(MP3_160K).mp3",
