Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                         "Musics/See You Again (Clean) - Tyler_ The Creator_Kali Uchis(MP3_160K).mp3",
                         "Musics/R U Mine_(MP3_160K).mp3",
                         "Musics/Coldplay - Yellow (Official Video)(MP3_160K).mp3",
-                        "Musics/Goo Goo Dolls - Iris [Official Music Video] [4K Remastered](MP3_160K).mp3",
+                        "Musics/Goo Goo Dolls – Iris [Official Music Video] [4K Remaster](MP3_160K).mp3",
                         "Musics/James Blunt - Goodbye My Lover (Official Music Video) [4K](MP3_160K).mp3",
                         "Musics/James Blunt - Same Mistake (Official Music Video)(MP3_160K).mp3",
                         "Musics/James Blunt - You_re Beautiful (Official Music Video) [4K](MP3_160K).mp3",
