--- a/index.html
+++ b/index.html
@@ -459,6 +459,14 @@
                 this.dom.appContent.addEventListener('touchstart', (e) => this.handleTouchStart(e), false);
                 this.dom.appContent.addEventListener('touchmove', (e) => this.handleTouchMove(e), false);
                 this.dom.appContent.addEventListener('touchend', () => this.handleTouchEnd(), false);
+
+                // --- IMPLEMENTAÇÃO DA MEDIA SESSION API ---
+                if ('mediaSession' in navigator) {
+                    navigator.mediaSession.setActionHandler('play', () => { this.togglePlayPause(); });
+                    navigator.mediaSession.setActionHandler('pause', () => { this.togglePlayPause(); });
+                    navigator.mediaSession.setActionHandler('previoustrack', () => { this.changeTrack('prev'); });
+                    navigator.mediaSession.setActionHandler('nexttrack', () => { this.changeTrack('next'); });
+                }
             },
 
             handleTouchStart(event) {
@@ -502,6 +510,32 @@
                 }
                 this.state.touchStartX = 0;
                 this.state.touchEndX = 0;
+            },
+            
+            // --- NOVO MÉTODO PARA MEDIA SESSION API ---
+            updateMediaSession() {
+                if (!('mediaSession' in navigator)) {
+                    console.log("Media Session API não suportada.");
+                    return;
+                }
+
+                if (this.state.currentSongIndex === -1) {
+                    navigator.mediaSession.metadata = null;
+                    return;
+                }
+
+                const song = this.state.songs[this.state.currentSongIndex];
+
+                navigator.mediaSession.metadata = new MediaMetadata({
+                    title: song.title || 'Título Desconhecido',
+                    artist: song.artist || 'Artista Desconhecido',
+                    album: 'Spobrefy',
+                    artwork: [
+                        { src: song.coverUrl || 'https://placehold.co/500x500/101010/1DB954?text=Spobrefy', sizes: '512x512', type: 'image/png' },
+                    ]
+                });
+                
+                navigator.mediaSession.playbackState = this.state.isPlaying ? "playing" : "paused";
             },
 
             handleSongListClick(event, songSourceList, isPlaylistContext = false) {
@@ -645,6 +679,7 @@
 
                 this.audio.src = URL.createObjectURL(song.file);
                 this.updatePlayerUI(song);
+                this.updateMediaSession(); // <-- ATUALIZAÇÃO
 
                 if (shouldPlay) this.play();
             },
@@ -653,7 +688,10 @@
                 if (this.state.songs.length === 0) return;
                 this.state.isPlaying = true;
                 this.audio.play()
-                    .then(() => this.savePlaybackState())
+                    .then(() => {
+                        this.savePlaybackState();
+                        this.updateMediaSession(); // <-- ATUALIZAÇÃO
+                    })
                     .catch(e => console.error("Erro ao tocar:", e));
                 this.dom.playPauseBtn.innerHTML = '<i class="fas fa-pause text-3xl"></i>';
             },
@@ -661,6 +699,7 @@
             pause() {
                 this.state.isPlaying = false;
                 this.audio.pause();
+                this.updateMediaSession(); // <-- ATUALIZAÇÃO
                 this.dom.playPauseBtn.innerHTML = '<i class="fas fa-play text-3xl ml-1"></i>';
             },
 
