Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                         "Musics/Arctic Monkeys - Arabella (Official Audio)(MP3_160K).mp3",
                         "Musics/505(MP3_160K).mp3",
                         "Musics/Arctic Monkeys - Do I Wanna Know_ (Official Video)(MP3_160K).mp3",
-                        "Musics/Art Deco(MP3_160K).mp3",
+                        "Musics/Art Deco.mp3",
                         "Musics/Bruno Mars - It Will Rain (Official Music Video)(MP3_160K).mp3",
                         "Musics/GIVĒON - Heartbreak Anniversary (Audio)(MP3_160K).mp3",
                         "Musics/GIVĒON - Make You Mine (Official Lyric Video)(MP3_160K).mp3",
