--- a/index.html
+++ b/index.html
@@ -655,7 +655,10 @@
                         "Musics/Olivia Rodrigo - favorite crime (Lyric Video)(MP3_160K).mp3",
                         "Musics/Olivia Rodrigo - happier (Lyric Video)(MP3_160K).mp3",
                         "Musics/Sabrina Carpenter - Manchild (Official Lyric Video)(MP3_160K).mp3",
-                        "Musics/I Love You_ I_m Sorry(MP3_160K).mp3"       
+                        "Musics/I Love You_ I_m Sorry(MP3_160K).mp3",
+                     "Musics/if u think i_m pretty(MP3_160K).mp3",
+                     "Musics/Die For You(MP3_160K).mp3",
+                     "Musics/Coming Down(MP3_160K).mp3"
                     ];
 
                     let changesMade = false;
