Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Spobrefy</title>
 
     <link rel="manifest" href="manifest.json">
@@ -180,7 +180,7 @@
         }
     </style>
 </head>
-<body class="bg-black antialiased overflow-hidden">
+<body class="bg-black antialiased overflow-hidden" style="padding-top: env(safe-area-inset-top); padding-bottom: env(safe-area-inset-bottom);">
 
     <div id="app-background"></div>
 
