--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div id="search-view" class="view pb-32">
             <h1 class="text-3xl font-bold px-6 md:px-8 pt-6 md:pt-8 mb-4">Buscar</h1>
 
-            <div class="sticky top-0 bg-black/90 backdrop-blur-lg z-10 px-6 md:px-8 py-3" style="padding-top: calc(0.75rem + env(safe-area-inset-top));">
+            <div class="sticky top-0 z-10 px-6 md:px-8 py-3" style="padding-top: calc(0.75rem + env(safe-area-inset-top));">
                 <div class="flex items-center gap-3">
                     <div class="relative flex-grow">
                         <input type="text" id="search-input" placeholder="O que você quer ouvir?" class="w-full bg-zinc-800 border border-zinc-700 rounded-lg px-4 py-2 pl-10 text-white placeholder-zinc-500 focus:outline-none focus:ring-2 focus:ring-green-500">
